--- a/docroot/profiles/labp/themes/la/lasbptheme/sass/components/wizard/_wizard_tip.scss
+++ b/docroot/profiles/labp/themes/la/lasbptheme/sass/components/wizard/_wizard_tip.scss
@@ -36,7 +36,7 @@
   border: 2px solid $dark_blue;
   font-size: 0.85em !important;
   padding: 6px 15px;
-  margin: 0 0 20px 0;
+  margin: 0 0 20px 31px !important;
   letter-spacing: 0.5px;
   font-weight: 900;
   display: inline-block;
